syntax = "proto3";
package stats.message;

option java_multiple_files = true;
option java_package = "stats.message";


message InteractionsCountRequestProto {
  repeated int64 event_id = 1;
}