syntax = "proto3";
package stats.message;

option java_multiple_files = true;
option java_package = "stats.message";


message RecommendedEventProto {
  int64 event_id = 1;
  double score = 2;
}